css/apposite-e4d7ce.webflow.css
/* ... */
.heading-10-copy {
  color: #313131;
  text-align: left;
  margin-top: 0;
  font-size: 16px;
  font-weight: 400;
  line-height: 16px;
}

.section {
  display: block;
}

.section-2 {
  width: 100%;
  height: 100%;
}

.section-3 {
  min-height: 0;
  margin-top: 100px;
}

.heading-10-copy-copy {
  color: #313131;
  text-align: left;
  max-width: 600px;
  margin-top: 0;
  margin-bottom: 0;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Cantarell, Helvetica Neue, Oxygen, Fira Sans, Droid Sans, sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 24px;
}

.image-8 {
  margin-top: 100px;
}

.section-5 {
  margin-top: 100px;
  padding-top: 60px;
}

.div-block-19-copy {
  position: relative;
}

.image-9 {
  margin-top: 40px;
}

.code-embed {
  margin-top: 40px;
  margin-left: -20px;
}

@media screen and (max-width: 991px) {
  .appositebody {
    background-color: #e7e7e6;
    background-image: none;
  }

  .heading {
    color: #000;
  }

  .paragraph-2 {
    color: #1b1b1b;
  }

  .paragraph-3 {
    color: rgba(19, 19, 19, .8);
  }

  .button {
    color: #000;
    background-color: #fff;
    border: 2px #86cea4;
    border-radius: 24px;
  }

  .button.w--current {
    display: none;
  }

  .link {
    text-decoration: none;
  }

  .heading-2 {
    color: #000;
  }

  .div-block-11 {
    z-index: 1;
  }

  .div-block-15 {
    width: 100%;
    min-width: 0;
    max-width: 940px;
    padding: 40px;
  }

  .link-copy {
    text-decoration: none;
  }

  .section-5 {
    margin-top: 40px;
  }
}

@media screen and (max-width: 767px) {
  .div-block {
    margin-top: 20px;
  }

  .heading-10 {
    margin-bottom: 20px;
    padding-right: 60px;
    line-height: 18px;
  }

  .div-block-19 {
    margin-bottom: 20px;
  }

  .heading-10-copy, .heading-10-copy-copy {
    margin-bottom: 20px;
    padding-right: 60px;
    line-height: 18px;
  }

  .section-5 {
    margin-top: 0;
  }

  .div-block-19-copy {
    margin-bottom: 20px;
  }
}

@media screen and (max-width: 479px) {
  .appositebody {
    object-fit: fill;
    overflow: scroll;
  }

  .appositegrid {
    grid-column-gap: 14px;
    grid-template: "Area Area"
                   ". ."
                   ". ."
                   ". ."
                   / 1fr;
    grid-auto-flow: column;
  }

  .div-block {
    margin-top: 0;
    padding-left: 10px;
  }

  .div-block-2 {
    justify-content: space-around;
    padding-right: 0;
  }

  .appositegridsubpage {
    grid-column-gap: 16px;
    flex-direction: column;
    grid-template: "Area Area"
    / 1fr;
    grid-auto-columns: 1fr;
    grid-auto-flow: row;
    padding-left: 10px;
    padding-right: 10px;
    display: flex;
  }

  .appositecontainersubpage {
    flex-direction: column;
    flex: 0 auto;
    justify-content: space-between;
    align-items: stretch;
    display: flex;
  }

  .appositeheading {
    font-size: 14px;
    font-weight: 600;
    line-height: 20px;
  }

  .heading-5, .heading-6 {
    font-size: 32px;
    line-height: 32px;
  }

  .div-block-6 {
    flex-direction: column;
  }

  .appositesupport {
    flex-direction: column;
    flex: 0 auto;
    justify-content: space-between;
    align-items: stretch;
    display: flex;
  }

  .heading-8 {
    font-size: 24px;
  }

  .div-block-15 {
    padding: 10px;
  }

  .link-block-3, .link-block-4 {
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    display: flex;
  }

  .link-block-5 {
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    display: flex;
  }

  .image-6 {
    border-radius: 8px;
  }

  .div-block-18 {
    background-position: 0%;
    background-size: cover;
  }

  .grid {
    grid-template-columns: 1fr;
  }

  .heading-9 {
    padding-left: 0;
  }

  .heading-10 {
    margin-bottom: 20px;
    padding-left: 0;
    padding-right: 100px;
    font-size: 14px;
    line-height: 18px;
  }

  .div-block-19 {
    padding-left: 10px;
  }

  .appositegridsubpage-copy {
    grid-column-gap: 16px;
    flex-direction: column;
    grid-template: "Area Area"
    / 1fr;
    grid-auto-columns: 1fr;
    grid-auto-flow: row;
    padding-left: 10px;
    padding-right: 10px;
    display: flex;
  }

  .heading-14 {
    text-align: center;
  }

  .heading-6-copy {
    font-size: 32px;
    line-height: 32px;
  }

  .div-block-20 {
    padding-left: 0;
  }

  .appositeheading-copy, .appositeheading-copy-copy {
    font-size: 14px;
    font-weight: 600;
    line-height: 20px;
  }

  .heading-9-copy {
    margin-top: 40px;
    padding-bottom: 10px;
    padding-left: 0;
    line-height: 24px;
  }

  .heading-10-copy {
    margin-bottom: 20px;
    padding-left: 0;
    padding-right: 100px;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Cantarell, Helvetica Neue, Oxygen, Fira Sans, Droid Sans, sans-serif;
    font-size: 14px;
    line-height: 18px;
  }

  .section-3 {
    margin-top: 40px;
    padding-left: 10px;
  }

  .heading-10-copy-copy {
    margin-top: 10px;
    margin-bottom: 20px;
    padding-left: 0;
    padding-right: 10px;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Cantarell, Helvetica Neue, Oxygen, Fira Sans, Droid Sans, sans-serif;
    font-size: 14px;
    line-height: 18px;
  }

  .image-8 {
    aspect-ratio: auto;
    object-fit: fill;
    margin-top: 10px;
  }

  .section-5 {
    margin-top: -40px;
    padding-top: 0;
  }

  .div-block-19-copy {
    padding-left: 0;
  }

  .code-embed {
    min-width: 300px;
    max-width: 300px;
  }
}

#w-node-c6e7c22c-967d-4996-acfd-b9229ca99ecb-5bf49b5b {
  grid-area: 1 / 1 / 3 / 3;
  align-self: center;
}

#w-node-_0690ff58-d16f-e061-21f4-a3b0202ff329-5bf49b5b {
  grid-area: Area;
}

#w-node-ef497c57-bd37-ce06-fe4d-31325ef032f6-5bf49b5b {
  grid-area: 1 / 3 / 3 / 5;
  align-self: center;
  justify-self: end;
}
/* ... */

